# storage/api-docs/api-docs.json
@@ -8,8 +8,7 @@
     "paths": {
         "/api/login": {
             "post": {
-                "summary": "Retrieve a JWT token",
-                "operationId": "getCustomerRates",
+                "summary": "[PUBLIC] Retrieve a JWT token",
                 "parameters": [
                     {
                         "name": "email",
@@ -37,31 +36,162 @@
             }
         },
         "/api/self": {
-            "post": {
-                "summary": "Return the user associated with the given JWT (headers)",
-                "operationId": "getCustomerRates",
+            "get": {
+                "summary": "[USER] Return the user associated with the given JWT (headers)",
                 "parameters": [
                     {
-                        "name": "email",
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Bearer your_token_here",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "user is retrieved"
+                    },
+                    "401": {
+                        "description": "the token is not valid"
+                    }
+                }
+            }
+        },
+        "/api/blogs": {
+            "get": {
+                "summary": "[PUBLIC] Get all blogs",
+                "responses": {
+                    "200": {
+                        "description": "all blogs are retrieved"
+                    }
+                }
+            },
+            "post": {
+                "summary": "[USER] Create a blog",
+                "parameters": [
+                    {
+                        "name": "title",
                         "in": "query",
-                        "description": "login email",
+                        "description": "blog title",
                         "required": true,
                         "type": "string"
                     },
                     {
-                        "name": "password",
+                        "name": "content",
                         "in": "query",
-                        "description": "unencrypted password (should be used over https)",
+                        "description": "blog content",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "countries",
+                        "in": "query",
+                        "description": "country for the blog",
+                        "required": true,
+                        "type": "string",
+                        "enum": [
+                            "South America",
+                            "North America",
+                            "Europe",
+                            "Middle East",
+                            "Asia"
+                        ]
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Bearer your_token_here",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "401": {
+                        "description": "the token is not valid"
+                    },
+                    "200": {
+                        "description": "all blogs are retrieved"
+                    }
+                }
+            }
+        },
+        "/api/blogs/{id}": {
+            "get": {
+                "summary": "[PUBLIC] get a single blog",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "blog id",
                         "required": true,
                         "type": "string"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "token has been retrieved"
+                        "description": "the blog is retrieved"
                     },
-                    "401": {
-                        "description": "bad credentials"
+                    "404": {
+                        "description": "blog not found"
+                    }
+                }
+            },
+            "put": {
+                "summary": "[PUBLIC] - update a blog",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "blog id",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "title",
+                        "in": "query",
+                        "description": "new title",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "content",
+                        "in": "query",
+                        "description": "new content",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "countries",
+                        "in": "query",
+                        "description": "new country",
+                        "required": false,
+                        "type": "string",
+                        "enum": [
+                            "South America",
+                            "North America",
+                            "Europe",
+                            "Middle East",
+                            "Asia"
+                        ]
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "the blog is retrieved"
+                    },
+                    "404": {
+                        "description": "blog not found"
+                    }
+                }
+            },
+            "delete": {
+                "summary": "[PUBLIC] - delete a blog",
+                "responses": {
+                    "200": {
+                        "description": "the blog is deleted from db"
+                    },
+                    "404": {
+                        "description": "blog not found"
                     }
                 }
             }
